docs/tests/nameres/custom_types/valid/StructVarDef.src
// Valid

struct str {
    let int a = 1;
}