docs/tests/nameres/custom_types/invalid/StructInvalidTypeOverload.src
// Valid

struct str {
    operator + (string a, int b) {
        a + b; 
    }
}